Add github install instructions to README.Rmd

--- a/README.Rmd
+++ b/README.Rmd
@@ -29,6 +29,13 @@ You can install the released version of eHDPrep from [CRAN](https://CRAN.R-proje
 install.packages("eHDPrep")
 ```
 
+Or from [GitHub](https://github.com) with:
+
+``` r
+install.packages("devtools")
+devtools::install_github("overton-group/eHDPrep")
+```
+
 ## Example
 
 eHDPrep can prepare health data for analysis with several approaches. For example, standardising strings representing missing values to `NA`:
