add single quotes for software/packages/API

--- a/README.Rmd
+++ b/README.Rmd
@@ -19,11 +19,11 @@ knitr::opts_chunk$set(
 
 <!-- badges: end -->
 
-The goal of eHDPrep is to provide robust quality control and semantic enrichment tools for preparation of health datasets. High-level and low-level functionality are included for general and specialist R users, respectively. A detailed vignette can be accessed using: `vignette("Introduction_to_eHDPrep", package = "eHDPrep")`.
+The goal of 'eHDPrep' is to provide robust quality control and semantic enrichment tools for preparation of health datasets. High-level and low-level functionality are included for general and specialist 'R' users, respectively. A detailed vignette can be accessed using: `vignette("Introduction_to_eHDPrep", package = "eHDPrep")`.
 
 ## Installation
 
-You can install the released version of eHDPrep from [CRAN](https://CRAN.R-project.org) with:
+You can install the released version of 'eHDPrep' from [CRAN](https://CRAN.R-project.org) with:
 
 ``` r
 install.packages("eHDPrep")
@@ -38,7 +38,7 @@ devtools::install_github("overton-group/eHDPrep")
 
 ## Example
 
-eHDPrep can prepare health data for analysis with several approaches. For example, standardising strings representing missing values to `NA`:
+'eHDPrep' can prepare health data for analysis with several approaches. For example, standardising strings representing missing values to `NA`:
 
 ```{r example}
 library(eHDPrep)
@@ -55,7 +55,7 @@ unique(eHDPrep::strings_to_NA(example_data, strings_to_replace = "equivocal")$t_
 
 ## System Requirements
 
-Some additional system dependencies are required for eHDPrep. These are detailed below:
+Some additional system dependencies are required for 'eHDPrep'. These are detailed below:
 
 ### Ubuntu
 
