--- a/doc/Introduction_to_eHDPrep.Rmd
+++ b/doc/Introduction_to_eHDPrep.Rmd
@@ -28,6 +28,8 @@ vignette: >
 ---
 
 ```{r, include=FALSE}
+old_opts <- options()
+old_knitr_opts <- knitr::opts_chunk$get()
 knitr::opts_chunk$set(
   collapse = TRUE,
   comment = "#>",
@@ -166,14 +168,13 @@ res$vars_with_zero_entropy
 
 To apply quality control to a dataset in one function, as `apply_quality_ctrl()` does, it is important to ensure variables are processed appropriately according to their data type. 'R' and 'eHDPrep' suggest data types with `assume_var_classes()` which writes the results to a .csv file. The user can amend this externally and import back into 'R' with `import_var_classes()`.
 
-```{r, eval = FALSE}
-
-assume_var_classes(data = example_data, out_file = "./datatypes.csv")
+```{r}
+tmp = tempfile(fileext = ".csv")
+assume_var_classes(data = example_data, out_file = tmp)
 
 # (user makes manual edits externally)
 
-import_var_classes(file = "./datatypes.csv")
-
+import_var_classes(file = tmp)
 ```
 
 The permitted datatypes are: `"id", "numeric", "double", "integer", "character", "factor", "ordinal", "ordinal_tstage, "ordinal_nstage", "genotype", "freetext", "logical"`. Note that `ordinal` variables are not modified by `apply_quality_ctrl()` as the ordinal classes would need to be specified for each variable. 'eHDPrep' provides two special ordinal data types `"ordinal_tstage"` and `"ordinal_nstage"` for two common cancer staging measures where the orders are precoded.
@@ -916,6 +917,19 @@ metavariables_nw %>%
 
 Note how variable sets 5 and 8 each have two nodes which share the same set of variables. The information content, calculated during `join_vars_to_ontol()`, of these nodes is compared and the node with the highest information content is used to label the set.
 
+Additionally, a minimum threshold can be applied to the information content to exclude less informative (less specific) meta-variables from subsequent aggregation with the `IC_threshold` parameter).
+
+### Review meta-variables' source variables
+
+Information describing dataset variables which have been identified as ontological descendants for each meta-variable is contained in the output of `metavariable_info()`. Reviewing this information can be important in understanding how meta-variables were constructed. This is particularly true for meta-variables with a low information content as their label will be less specific to the dataset variables.
+
+`metavariable_variable_descendants()` distils this information from the output of `metavariable_info()` into a table where each row describes one most informative common ancestor (the precursor to meta-variable aggregations), its information content, and one of its descendant/source variables which was used in its creation.
+
+```{r}
+metavariable_variable_descendants(metavariables_nw)
+```
+
+
 ### Generate semantic aggregations
 
 With the sets of variables identified and the meta-variable used to label each set confirmed, the next step is to perform the aggregations. This functionality requires the previously described low-level SE functions and is overlaps with the `semantic_enrichment()` function, but does not carry out some of the checks.
@@ -930,6 +944,12 @@ example_ontology %>%
 ## summary of output
 tibble::glimpse(qc_se_data)
 
+```
+
+```{r, include=FALSE}
+# restore original options
+options(old_opts)
+knitr::opts_chunk$set(old_knitr_opts)
 ```
 
 # References
