--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,9 @@ knitr::opts_chunk$set(
 # eHDPrep
 
 <!-- badges: start -->
-
+[![Downloads](https://cranlogs.r-pkg.org/badges/grand-total/eHDPrep)](https://cranlogs.r-pkg.org/badges/grand-total/eHDPrep)
+[![CRAN status](https://www.r-pkg.org/badges/version/eHDPrep)](https://cran.r-project.org/package=eHDPrep)
+[![R-CMD-check](https://github.com/overton-group/eHDPrep/actions/workflows/r.yml/badge.svg)](https://github.com/overton-group/eHDPrep/actions/workflows/r.yml/badge.svg)
 <!-- badges: end -->
 
 The goal of 'eHDPrep' is to provide robust quality control and semantic enrichment tools for preparation of health datasets. High-level and low-level functionality are included for general and specialist 'R' users, respectively. A detailed vignette can be accessed using: `vignette("Introduction_to_eHDPrep", package = "eHDPrep")`.
